<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total">What is the Total Bill?</string>
    <string name="service">How was the Service?</string>
    <string name="amazingTip">Amazing (20%)</string>
    <string name="goodTip">Good (18%)</string>
    <string name="okayTip">Okay (15%)</string>
    <string name="total_amount">Total Amount: %s</string>
</resources>