<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">
<!-- this is how you comment in XML nice -->
    <EditText
        android:id="@+id/billTotal_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/bill_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/serviceQuestion_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/billTotal_editText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/service"
        />
    <RadioGroup
        android:id="@+id/tip_radioGroup"
        android:checkedButton="@id/twentyTip_radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/serviceQuestion_textview"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/twentyTip_radioButton"
            android:text="@string/amazingTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/eighteenTip_radioButton"
            android:text="@string/goodTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/fifteenTip_radioButton"
            android:text="@string/okayTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <Switch
        android:id="@+id/roundUp_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Round Up tip?"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_radioGroup"
        app:layout_constraintStart_toStartOf="@+id/tip_radioGroup"

        />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/roundUp_switch"
        app:layout_constraintStart_toStartOf="@+id/roundUp_switch"
        app:layout_constraintEnd_toEndOf="@+id/roundUp_switch"
        android:text="CALCULATE"
        />
    <TextView
        android:id="@+id/tipResult_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tip Amount"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>